# grokking_deep_learning

./: LICENSE  README.md  pyproject.toml
grokking_deep_learning/: backend_check.py  common-loss-functions.md
grokking_deep_learning/chapter_preliminaries/automatic_differentiation/: backward_non_scalar_variables.md  detaching_computation.md
grokking_deep_learning/chapter_preliminaries/calculus/: Partial-Derivatives-and-Gradients.md  calculus.md  chain-Rule.md  derivatives_and_differentiation.md  derivatives_and_differentiation.py  multivariable_chain_rule_example.md  partial_derivatives_gradients_from_scratch.py  partial_derivatives_gradients_pytorch.py
grokking_deep_learning/chapter_preliminaries/data/: house_tiny.csv
grokking_deep_learning/chapter_preliminaries/data_manipulation/: Data-Manipulation.md  index_slicing.py  operators.py  other_objects.py
grokking_deep_learning/chapter_preliminaries/data_processing/: heart_disease_data.py  prepped_inputs.csv  prepped_targets.csv
grokking_deep_learning/chapter_preliminaries/linear_algebra/: Linear-Algebra.md  dot_products.py  exercises.py  matrix_matrix_multiplication.py  matrix_vector_products.py  non_reduction_sum.py  props_tensor_arith.py  scalars.py  tensors.py  vectors.py
grokking_deep_learning/preliminaries/: README.md
grokking_deep_learning/preliminaries/automatic_differentiation/: gradients_and_python_control_flows.md
grokking_deep_learning/preliminaries/calculus/: prove_from_first_principles.md  visualization_utilities.py
grokking_deep_learning/preliminaries/data_manipulation/: Data-Manipulation.md  (+2 more)
(+32 files in other folders)
