[project]
name = "grokking-deep-learning"
version = "0.1.0"
description = "Grokking Deep Learning from first principles"
authors = [
    {name = "sillians",email = "ihuomacbasil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "d2l (>=1.0.3,<2.0.0)",
    "ucimlrepo (>=0.0.7,<0.0.8)"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

[tool.poetry.group.dev.dependencies]
torch = "^2.7.0"
torchvision = "^0.22.0"
numpy = "^1.23.5"
pandas = "^2.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
